--- a/slides/NLP-CRF.tex
+++ b/slides/NLP-CRF.tex
@@ -569,6 +569,16 @@ where $\vec{\phi}(x_{1:m},j,s_{j-1},s_j)$ are the same as the feature vectors us
 \end{scriptsize}
 \end{frame}
 
+
+\begin{frame}{Example}
+  \begin{figure}[h]
+        	\includegraphics[scale = 0.28]{pics/CRF3.png}
+        \end{figure}
+        
+        \footnotemark{source: \url{http://people.ischool.berkeley.edu/~dbamman/nlpF18/slides/12_neural_sequence_labeling.pdf}}
+\end{frame}
+
+
 \begin{frame}{Conditional Random Fields (CRFs)}
 \begin{scriptsize}
 
