fixed typos in slide 1

--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -77,7 +77,7 @@
 \begin{scriptsize}
 \begin{itemize}
 
-\item The amount of digitalized textual data being generated every day is huge (e.g, the Web, social media, medical records, digitalized books).
+\item The amount of digitized textual data being generated every day is huge (e.g, the Web, social media, medical records, digitized books).
 
 \item So does the need for translating, analyzing, and managing this flood of words and text.
 
@@ -131,7 +131,7 @@ Computational linguistics (CL) studies the computational processes underlying (h
  \item How do we learn language?
 \end{itemize}
 
-Similiar methods and models are used in NLP and CL.
+Similar methods and models are used in NLP and CL.
 \end{scriptsize}
 \end{frame}
 
@@ -197,7 +197,7 @@ impedes the flow of air from the lungs. \cite{fromkin2018introduction}
 \item Phonemes are  the basic form of a sound (e.g., the phoneme /p/)
 \item Example: Why \textbf{g} is silent in sign but is pronounced in the related word signature?
 \item Example: English speakers pronounce /t/ differently (e.g., in water)
-\item In Spanish /z/ is pronounced differenly in Spain and Latin America.
+\item In Spanish /z/ is pronounced differently in Spain and Latin America.
 \item Phonetics vs Phonology: \url{http://www.phon.ox.ac.uk/jcoleman/PHONOLOGY1.htm}.
 \end{itemize}
 }
@@ -479,17 +479,16 @@ features for machine learning approaches to NLP.
 \begin{frame}{Sentiment Classification of Tweets}
 \begin{scriptsize}
 \begin{itemize}
-\item In 2013, The Semantic Evaluation (SemEval) workshop organised the
+\item In 2013, The Semantic Evaluation (SemEval) workshop organized the
 ``Sentiment Analysis in Twitter
 task'' \cite{Semeval2013}.
  \item The task was divided into two sub-tasks: the expression
 level and the message level. 
 \item Expression-level: focused on determining
-the sentiment polarity of a message according to a marked entity within
-its content.
+the sentiment polarity of a message according to a marked entity within its content.
 \item Message-level: the polarity has to be determined according to
 the overall message.
-\item  The organisers released training and testing datasets
+\item  The organizers released training and testing datasets
 for both tasks.
 \cite{Semeval2013}
 \end{itemize}
@@ -556,7 +555,7 @@ classifier with the following hand-crafted features for representing tweets:
 \begin{itemize}
 \item Deep Learning yields state-of-the-art results in most NLP tasks. 
 \item Large amounts of training data and faster multicore GPU machines are key in the success of deep learning. 
-\item \textbf{Neural networks} and \textbf{word embeddings} play a key role in modern  sentiment analysis models.
+\item \textbf{Neural networks} and \textbf{word embeddings} play a key role in modern NLP models.
 \end{itemize}
 \end{scriptsize}
 \end{frame}
@@ -584,7 +583,7 @@ NLP progress can be divided into three main waves: 1) rationalism, 2) empiricism
 \item [1950 - 1990] Rationalism: approaches endeavored to design hand-crafted rules to incorporate knowledge and reasoning mechanisms into intelligent NLP systems (e.g,  ELIZA for simulating a Rogerian psychotherapist, MARGIE for structuring real-world information into concept ontologies).
 \item [1991 - 2009] Empiricism: characterized by the exploitation of data corpora and
 of (shallow) machine learning and statistical models (e.g., Naive Bayes, HMMs, IBM translation models).
-\item [2010 - ] Deep Learning: feature engineering (considered as a bottleneck) is replaced with represeation learning and/or deep neural networks (e.g., \url{https://www.deepl.com/translator}). A very influential paper in this revolution: \cite{collobert2011natural}.
+\item [2010 - ] Deep Learning: feature engineering (considered as a bottleneck) is replaced with representation learning and/or deep neural networks (e.g., \url{https://www.deepl.com/translator}). A very influential paper in this revolution: \cite{collobert2011natural}.
 \end{itemize}
 
 \footnotetext{Dates are approximated.}
@@ -601,7 +600,7 @@ In this course we will introduce modern concepts in natural language processing 
 \item Linear Models.
 \item Naive Bayes.
 \item Hidden Markov Models.
-\item Maximum Entropy Markov Models (MEMMs) and Condional Random Fields (CRFs).
+\item Maximum Entropy Markov Models (MEMMs) and Conditional Random Fields (CRFs).
 \item Neural Networks.
 \item Word embeddings.
 \item Convolutional Neural Networks (CNNs) 
