Fixed wordvectors slides typos

--- a/slides/NLP-wordvectors.tex
+++ b/slides/NLP-wordvectors.tex
@@ -219,7 +219,7 @@ Distributional methods are also referred to as count-based methods.
 \begin{itemize}
 
 
-\item Most popular models based on the second approach are skip-gram \cite{Mikolov2013}, continuos bag-of-words \cite{Mikolov2013}, and Glove \cite{penningtonSM14}.
+\item Most popular models based on the second approach are skip-gram \cite{Mikolov2013}, continuous bag-of-words \cite{Mikolov2013}, and Glove \cite{penningtonSM14}.
 
 \item Word embeddings have shown to be more powerful than distributional approaches in many NLP tasks~\cite{baroni2014don}.
 
@@ -235,7 +235,7 @@ Distributional methods are also referred to as count-based methods.
 \begin{frame}{Word2Vec}
 \begin{scriptsize}
 \begin{itemize}
-\item Word2Vec is a software package that implements two neural network architectures for training word embeddings:  Continuos Bag of Words (CBOW) and Skip-gram.
+\item Word2Vec is a software package that implements two neural network architectures for training word embeddings:  Continuous Bag of Words (CBOW) and Skip-gram.
 \item It implements two  optimization models: Negative Sampling and Hierarchical Softmax.
 \item These models are shallow neural networks that are trained to predict the contexts of words.
 
@@ -467,7 +467,7 @@ pairs which are not in the data.
 
 
 
-\begin{frame}{Continuos Bag of Words: CBOW}
+\begin{frame}{Continuous Bag of Words: CBOW}
 \begin{scriptsize}
 \begin{itemize}
 \item  Similar to the skip-gram model but now the center word is predicted from the surrounding context.
@@ -544,7 +544,7 @@ trained using Word2Vec: $\vec{w}_{king} - \vec{w}_{man} + \vec{w}_{woman} \appro
 \begin{scriptsize}
 \begin{itemize}
    
-\item There are many datasets with human annotated associations of word pairs or gold anologies that can be used to evaluate word embeddings algorithms.
+\item There are many datasets with human annotated associations of word pairs or gold analogies that can be used to evaluate word embeddings algorithms.
 
 \item Those approaches are called \textit{Intrinsic Evaluation Approaches}.
 
@@ -586,7 +586,7 @@ the two algorithmic families are equivalent.
 \begin{scriptsize}
 \begin{itemize}
   
-\item FastText embeedings extend the skipgram model to take into account the internal structure of words while learning word representations \cite{bojanowski2016enriching}.
+\item FastText embeddings extend the skipgram model to take into account the internal structure of words while learning word representations \cite{bojanowski2016enriching}.
 
 \item A vector representation is associated with each character $n$-gram.
 
