Fix single rnn typo

--- a/slides/NLP-RNN.tex
+++ b/slides/NLP-RNN.tex
@@ -500,7 +500,7 @@ biRNN^{*}(\vec{x}_{1:n})= \vec{y}_{1:n} = biRNN(\vec{x}_{1:n},1),\dots,biRNN(\ve
 \begin{itemize}
 \item Consider the RNN as a general purpose computing device, where the state $\vec{s}_i$ represents a finite memory.
 \item Each application of the function $R$ reads in an input $\vec{x}_{i+1}$ , reads in the current memory $\vec{s}_i$ , operates on them in some way, and writes the result into memory.
-\item This resuls in a new memory state $\vec{s}_{i+1}$.
+\item This results in a new memory state $\vec{s}_{i+1}$.
 \item An apparent problem with the S-RNN architecture is that the memory access is not controlled. 
 \item At each step of the computation, the entire memory state is read, and the entire memory state is written.
 \end{itemize}
