typo in CRF slides

--- a/slides/NLP-CRF.tex
+++ b/slides/NLP-CRF.tex
@@ -532,7 +532,7 @@ sequence into account.
  P(s_{1:m}|x_{1:m}; \vec{w}) = \frac{\exp (\vec{w} \cdot \vec{\Phi}(x_{1:m},s_{1:m}))}{\sum_{s'_{1:m} \in S^m}\exp (\vec{w} \cdot \vec{\Phi}(x_{1:m},s'_{1:m}))}
 \end{displaymath}
 
-\item This is ``just'' another log-linear model, but it is is ``giant''.
+\item This is ``just'' another log-linear model, but it is ``giant''.
 \item The space of possible values for $s_{1:m}$ is huge $S^m$. 
 \item The normalization constant (denominator in the above expression) involves a sum over all possible tag sequences $S^m$.
 \item These issues might seem to cause severe computational problems.
