--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -242,7 +242,7 @@ the correct function generating our training data.
 \begin{itemize}
 \item The sigmoid activation function $\sigma(x) = \frac{1}{1+e^{-x}}$ is an S-shaped function, transforming each value x into the range $[0, 1]$.
 \item The sigmoid was the canonical nonlinearity for neural networks since their inception.
-\item Is currently considered to be deprecated for use in internal layers of neural networks, as the choices listed next prove to work much better empirically.
+\item It is currently considered to be deprecated for use in internal layers of neural networks, as the choices listed next prove to work much better empirically.
 \end{itemize}
 
 \begin{figure}[htb]
