--- a/slides/NLP-RNN.tex
+++ b/slides/NLP-RNN.tex
@@ -237,7 +237,7 @@ p(e = j|\vec{x}_{1:n}) = \text{softmax}(RNN(\vec{x}_{1:n})\cdot W +\vec{b})_{[j]
 \begin{frame}{Elman Network or Simple-RNN}
 
   \begin{figure}[h]
-        	\includegraphics[scale = 0.35]{pics/elmanRNN.png}
+        	\includegraphics[scale = 0.55]{pics/elman.pdf}
         \end{figure}
 
 \end{frame}
